--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
+# Core AutoGen packages (latest stable)
 autogen-agentchat>=0.4.0
 autogen-core>=0.4.0
-autogen-ext>=0.4.0
+autogen-ext[openai]>=0.4.0
+
+# LLM and API clients
+openai>=1.30.0
 python-dotenv>=1.0.0
+
+# Data processing and ML
+numpy>=1.24.0
+scikit-learn>=1.3.0
 pydantic>=2.0.0
-asyncio-mqtt
-aiohttp
+
+# Web and async
+aiohttp>=3.8.0
+asyncio-mqtt>=0.16.0
+requests>=2.31.0
+
+# Workshop utilities
+jupyter>=1.0.0
+ipykernel>=6.25.0
+pandas>=2.0.0
+
+# Optional: For production deployments
+# uvicorn>=0.23.0
+# fastapi>=0.100.0
