--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,13 @@ autogen-ext[mcp]>=0.4.0
 # LLM and API clients
 openai>=1.30.0
 python-dotenv>=1.0.0
+
+# RAG and text processing
+scikit-learn>=1.3.0
+
+# MCP Server dependencies
+fastmcp>=0.1.0
+
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
